[tool.poetry]
name = "cronos-track-ibc-events"
version = "0.1.0"
description = ""
authors = ["ken timsit <8959282+kentimsit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cronos_track_ibc_events"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
jupyter = "^1.0.0"
bech32 = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
